tests/failing/invalid_one2many_name.stderr
error: One2many field must be named like a snake_case plural of the underlying entity name: 'foos: Vec<Foo>'
  --> tests/failing/invalid_one2many_name.rs:11:5
   |
11 |     foo_entities: Vec<Foo> // should be foos: Vec<Foo>
   |     ^^^^^^^^^^^^^^^^^^^^^^
